--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -85,7 +85,7 @@
             <li class="masthead__menu-item masthead__menu-item--lg"><a href="../index.html">Don Lim</a>
             </li>
             <li class="masthead__menu-item"><a href="../index.html">Home</a></li>
-            <li class="masthead__menu-item"><a href="../pages/projects.html">Projects</a></li>
+            <li class="masthead__menu-item"><a href="../pages/papers.html">Papers</a></li>
             <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
             <li class="masthead__menu-item"><a href="../pages/certifications.html">Certifications</a></li>
             <li class="masthead__menu-item"><a href="../pages/samples.html">Work Samples</a></li>
