--- a/pages/samples.html
+++ b/pages/samples.html
@@ -85,7 +85,7 @@
             <li class="masthead__menu-item masthead__menu-item--lg"><a href="../index.html">Don Lim</a>
             </li>
             <li class="masthead__menu-item"><a href="../index.html">Home</a></li>
-            <li class="masthead__menu-item"><a href="../pages/projects.html">Projects</a></li>
+            <li class="masthead__menu-item"><a href="../pages/papers.html">Papers</a></li>
             <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
             <li class="masthead__menu-item"><a href="../pages/certifications.html">Certifications</a></li>
             <li class="masthead__menu-item"><a href="../pages/samples.html">Work Samples</a></li>
@@ -154,9 +154,7 @@
                 target="_blank" rel="noopener noreferrer">Global
                 Database on Intergenerational Mobility</a> (GDIM) - [<a href="../sample/Data-sample.html"
                 target="_blank" rel="noopener noreferrer">R</a>] <ul>
-                <li>Clustering</li>
-                <li>Choropleth graph</li>
-                <li>Initial OLS</li>
+                <li>Techniques used: Clustering, choropleth visulaization, OLS</li>
               </ul>
             </li>
             <li>
@@ -164,52 +162,70 @@
                 rel="noopener noreferrer">Retail Data Set II</a> Online
               from Dr. Daqing Chen, School of Engineering, London South Bank University - [<a
                 href="../sample/RFM_sample.html" target="_blank" rel="noopener noreferrer">R</a>] <ul>
-                <li>RFM analysis</li>
-                <li>Segmentation</li>
-                <li>Clustering</li>
-                <li>Retention and lifetime value analysis</li>
+                <li>Techniques used: RFM analysis, heat map, segmentation, clustering, retention and lifetime value analysis</li>
               </ul>
             </li>
           </ul> <br />
           <h2>Python (from Coursera certifications)</h2>
           <ul>
-            <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 1/assignment1.html"
-                target="_blank" rel="noopener noreferrer">Simple regex</a></li>
-            <h3></h3>
-            <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 2/assignment2.html"
-                target="_blank" rel="noopener noreferrer">Simple data cleaning and analysis</a></li>
-            <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 3/assignment3.html"
-                target="_blank" rel="noopener noreferrer">Data analysis of renewable energy indicators</a></li>
-            <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 4/assignment4.html"
-                target="_blank" rel="noopener noreferrer">Correlation (pearsonr) of win/loss rate with population from
-                the MLB, NBA, and NHL</a></li>
-            <li><a href="../python/Coursera/2 Data Representation/Week 2/Assignment/Assignment2.html" target="_blank"
-                rel="noopener noreferrer">Visualization of record-breaking high and low temperatures in Ann Arbor on
-                2015 (range from 2005-2014)</a></li>
-            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 1/Assignment/Assignment+1.html"
-                target="_blank" rel="noopener noreferrer">Training KNN classifier on breast cancer dataset from
-                sklearn</a></li>
-            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 2/Assignment/Assignment+2.html"
-                target="_blank" rel="noopener noreferrer">Training decision tree, SVC, linear, and Lasso classifiers on
-                the UCI Mushroom dataset</a> (<a href="http://archive.ics.uci.edu/ml/datasets/Mushroom?ref=datanews.io"
-                target="_blank" rel="noopener noreferrer">Link</a>)</li>
-            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.html"
-              target="_blank" rel="noopener noreferrer">Training
-                dummy and SBC classifiers on fraud data</a></li>
-            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 4/Assignment/Assignment+4.html"
-              target="_blank" rel="noopener noreferrer">Training
-                random forest classifier to predict blight ticket violations</a></li>
-            <li><a href="../python/Coursera/4 Applied Text Mining/Week 1/Assignment/Assignment+1.html"
-              target="_blank" rel="noopener noreferrer">Cleaning and
-                sorting datetimes</a></li>
-            <li><a href="../python/Coursera/4 Applied Text Mining/Week 2/Assignment/Assignment+2.html"
-              target="_blank" rel="noopener noreferrer">Text parsing, lemmatization, and spell-checking of Moby Dick</a></li>
-            <li><a href="../python/Coursera/4 Applied Text Mining/Week 3/Assignment/Assignment+3.html"
-              target="_blank" rel="noopener noreferrer">Machine learning using logistic regression and count vectorizer to predict spam messages</a></li>
-            <li><a href="../python/Coursera/4 Applied Text Mining/Week 4/Assignment+4.html"
-              target="_blank" rel="noopener noreferrer"">Machine learning to compare similarities between documents and assigning them the correct topics</a></li>
+            <li><b>Introduction to Python for Data Science Specialization:</b>
+              <ul>
+                <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 1/assignment1.html"
+                  target="_blank" rel="noopener noreferrer">Simple regex</a></li>
+                <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 2/assignment2.html"
+                    target="_blank" rel="noopener noreferrer">Simple data cleaning and analysis</a></li>
+                <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 3/assignment3.html"
+                    target="_blank" rel="noopener noreferrer">Data analysis of renewable energy indicators</a></li>
+                <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 4/assignment4.html"
+                    target="_blank" rel="noopener noreferrer">Correlation (pearsonr) of win/loss rate with population from
+                    the MLB, NBA, and NHL</a></li>
+              </ul></li>
+            <li><b>Data Representation</b>
+              <ul>
+                <li><a href="../python/Coursera/2 Data Representation/Week 2/Assignment/Assignment2.html" target="_blank"
+                  rel="noopener noreferrer">Visualization of record-breaking high and low temperatures in Ann Arbor on
+                  2015 (year range 2005-2014)</a></li>
+              </ul>
+            </li>
+            <li><b>Applied Machine Learning</b>
+              <ul>
+                <li><a href="../python/Coursera/3 Applied Machine Learning/Week 1/Assignment/Assignment+1.html"
+                  target="_blank" rel="noopener noreferrer">Training KNN classifier on breast cancer dataset from
+                  sklearn</a></li>
+              <li><a href="../python/Coursera/3 Applied Machine Learning/Week 2/Assignment/Assignment+2.html"
+                  target="_blank" rel="noopener noreferrer">Training decision tree, SVC, linear, and Lasso classifiers on
+                  the UCI Mushroom dataset</a> <br/> [<a href="http://archive.ics.uci.edu/ml/datasets/Mushroom?ref=datanews.io"
+                  target="_blank" rel="noopener noreferrer"><i>Link to dataset</i></a>]</li>
+              <li><a href="../python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.html"
+                target="_blank" rel="noopener noreferrer">Training
+                  dummy and SBC classifiers on fraud data</a></li>
+              <li><a href="../python/Coursera/3 Applied Machine Learning/Week 4/Assignment/Assignment+4.html"
+                target="_blank" rel="noopener noreferrer">Training
+                  random forest classifier to predict blight ticket violations</a></li>
+              </ul>
+            </li>
+            <li><b>Applied Text Mining</b>
+              <ul>
+                <li><a href="../python/Coursera/4 Applied Text Mining/Week 1/Assignment/Assignment+1.html"
+                  target="_blank" rel="noopener noreferrer">Cleaning and
+                    sorting datetimes</a></li>
+                <li><a href="../python/Coursera/4 Applied Text Mining/Week 2/Assignment/Assignment+2.html"
+                  target="_blank" rel="noopener noreferrer">Text parsing, lemmatization, and spell-checking of Moby Dick</a></li>
+                <li><a href="../python/Coursera/4 Applied Text Mining/Week 3/Assignment/Assignment+3.html"
+                  target="_blank" rel="noopener noreferrer">Machine learning using logistic regression and count vectorizer to predict spam messages</a></li>
+                <li><a href="../python/Coursera/4 Applied Text Mining/Week 4/Assignment+4.html"
+                  target="_blank" rel="noopener noreferrer"">Machine learning to compare similarities between documents and assigning them the correct topics</a></li>
+              </ul>
+            </li>
+            <li><b>Applied Social Networks</b>
+              <ul>
+                <li><a href="../python/Coursera/5 Applied Social Networks/Week 1/Assignment/assignment1.html" target="_blank" rel="noopener noreferrer">Creating and manipulating graphs</a></li>
+                <li><a href="../python/Coursera/5 Applied Social Networks/Week 2/Assignment/assignment2.html" target="_blank" rel="noopener noreferrer">Network Connectivity</a></li>
+                <li><a href="../python/Coursera/5 Applied Social Networks/Week 3/assignment3.html" target="_blank" rel="noopener noreferrer">Centrality of nodes, Scaled Page Rank algorithm, and HITS algorithm</a></li>
+                <li><a href="../python/Coursera/5 Applied Social Networks/Week 4/Assignment/assignment4.html" target="_blank" rel="noopener noreferrer">Machine learning using logistic regression for predicting future connections between employees of a network (AUC score: 0.935)</a></li>
+              </ul>
+            </li>
           </ul>
-          <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
             ga('require', 'ipMeta', {
               serviceProvider: 'dimension1',
