--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a>
             </li>
             <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
-            <li class="masthead__menu-item"><a href="pages/projects.html">Projects</a></li>
+            <li class="masthead__menu-item"><a href="pages/papers.html">Papers</a></li>
             <li class="masthead__menu-item"><a href="pages/coursework.html">Coursework</a></li>
             <li class="masthead__menu-item"><a href="pages/certifications.html">Certifications</a></li>
             <li class="masthead__menu-item"><a href="/pages/samples.html">Work Samples</a></li>
