--- a/pages/papers.html
+++ b/pages/papers.html
@@ -85,7 +85,7 @@
             <li class="masthead__menu-item masthead__menu-item--lg"><a href="../index.html">Don Lim</a>
             </li>
             <li class="masthead__menu-item"><a href="../index.html">Home</a></li>
-            <li class="masthead__menu-item"><a href="../pages/projects.html">Projects</a></li>
+            <li class="masthead__menu-item"><a href="../pages/papers.html">Papers</a></li>
             <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
             <li class="masthead__menu-item"><a href="../pages/certifications.html">Certifications</a></li>
             <li class="masthead__menu-item"><a href="../pages/samples.html">Work Samples</a></li>
@@ -147,12 +147,12 @@
             </style>
           </head>
           <h2>Projects</h2> <br />
-          <h3>Master's thesis submitted in partial requirement at the CEVRO Institute</h3> <br />
+          <h3>Master's thesis submitted in partial requirement for the CEVRO Institute</h3> <br />
           <a href="../research/LimDon_WritingSample_Thesis.pdf" target="_blank" rel="noopener noreferrer"><i
               class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>An Institutional Analysis on Open Source: How
             Developers
             Use Knowledge and Entrepreneurship in Communities</a><br /> <br />
-          <h3>Professional paper submitted in partial requirement at Texas Tech University</h3> <br />
+          <h3>Professional paper submitted in partial requirement for Texas Tech University</h3> <br />
           <a href="../research/fbdg/FBDG_final.pdf" target="_blank" rel="noopener noreferrer"><i
               class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Low-Fat Diet on Global Health Outcomes&#8212A
             Two-Stage
