--- a/pages/samples.html
+++ b/pages/samples.html
@@ -198,7 +198,7 @@
                   target="_blank" rel="noopener noreferrer"><i>Link to dataset</i></a>]</li>
               <li><a href="../python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.html"
                 target="_blank" rel="noopener noreferrer">Training
-                  dummy and SBC classifiers on fraud data</a></li>
+                  dummy and SVC classifiers on fraud data</a></li>
               <li><a href="../python/Coursera/3 Applied Machine Learning/Week 4/Assignment/Assignment+4.html"
                 target="_blank" rel="noopener noreferrer">Training
                   random forest classifier to predict blight ticket violations</a></li>
