--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -136,8 +136,8 @@
               }
             </style>
           </head>
-          <h2>Spring 2022</h2>
-          <div class="border">
+          <h2 class="header">Spring 2022 <button class="expandButton">+</button></h2>
+          <div class="border content">
             <h3>AAEC 5310 Advanced Market Analysis</h3>
             <ul class="container2">
               <li>
@@ -166,8 +166,8 @@
               </li>
             </ul>
           </div> <br />
-          <h2>Fall 2021</h2>
-          <div class="border">
+          <h2 class="header">Fall 2021 <button class="expandButton">+</button></h2>
+          <div class="border content">
             <h3>AAEC 5301 Institutional Analysis</h3>
             <ul class="container2">
               <li>
@@ -272,8 +272,8 @@
               </li>
             </ul>
           </div> <br />
-          <h2>Spring 2021</h2>
-          <div class="border">
+          <h2 class="header">Spring 2021 <button class="expandButton">+</button></h2>
+          <div class="border content">
             <h3>AAEC 5303 Applied Econometrics II</h3>
             <ul class="container2">
               <li>
@@ -341,8 +341,8 @@
               </li>
             </ul>
           </div> <br />
-          <h2>Fall 2020</h2>
-          <div class="border">
+          <h2 class="header">Fall 2020 <button class="expandButton">+</button></h2>
+          <div class="border content">
             <h3>AAEC 5307 Applied Econometrics I</h3>
             <ul class="container2">
               <li>
@@ -479,6 +479,7 @@
     ga('send', 'pageview');
   </script>
   <script src="../js/scroll.js"></script>
+  <script src="../js/animate.js"></script>
 </body>
 
 </html>
