--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -136,7 +136,8 @@
               }
             </style>
           </head>
-          <h2>Django</h2>
+          <h2>Django for Everybody (<a href="https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6" target="_blank"
+            rel="noopener noreferrer">SVTRKEJV62T6</a>)</h2>
           <ul>
             <li>Jun 2023 - Web Application Technologies and Django (<a href="https://www.coursera.org/account/accomplishments/verify/CY3BNRYF6LT7" target="_blank"
               rel="noopener noreferrer">CY3BNRYF6LT7</a>)</li>
@@ -144,10 +145,11 @@
               rel="noopener noreferrer">Y3VNY2V5HQHS</a>)</li>
             <li>Jul 2023 - Django Features and Libraries (<a href="https://www.coursera.org/account/accomplishments/verify/MZBYC4JLPTX3" target="_blank"
               rel="noopener noreferrer">MZBYC4JLPTX3</a>)</li>
-            <li> July 2023 - Using JavaScript, JQuery, and JSON in Django (<a href="https://www.coursera.org/account/accomplishments/verify/PVM9LRM4JFYN" target="_blank"
+            <li> Jul 2023 - Using JavaScript, JQuery, and JSON in Django (<a href="https://www.coursera.org/account/accomplishments/verify/PVM9LRM4JFYN" target="_blank"
               rel="noopener noreferrer">PVM9LRM4JFYN</a>)</li>
           </ul>
-          <h2>Python</h2>
+          <h2>Applied Data Science with Python (<a href="https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE" target="_blank"
+            rel="noopener noreferrer">9E4EZST8HHFE</a>)</h2>
             <ul>
               <li>Sep 2022 - Introduction to Data Science in Python (<a
                   href="https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU" target="_blank"
@@ -163,16 +165,19 @@
                   rel="noopener noreferrer">WXVAJP7YR94W</a>)</li>
               <li>Aug 2023 - Applied Social Network Analysis in Python (<a href="https://www.coursera.org/account/accomplishments/verify/NUGCHH9ZJT9B" target="_blank" rel="noopener noreferrer">NUGCHH9ZJT9B</a>)</li>
             </ul>
-          <h2>PHP</h2>
-            <ul>
-              <li>Feb 2023 - Building Web Applications in PHP (<a href="https://www.coursera.org/account/accomplishments/verify/LBJJ7Y3HQRXK">LBJJ7Y3HQRXK</a>)</li>
-            </ul>
-          <h2>SQL</h2>
+          <h2>Web Applications for Everybody (<a href="https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U" target="_blank"
+            rel="noopener noreferrer">K85V99DMXY4U</a>)</h2>
             <ul>
               <li>Dec 2021 - Introduction to Structured Query Language (SQL) (<a
-                  href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD" target="_blank"
-                  rel="noopener noreferrer">GA25HJ4B4XRD</a>)</li>
+                href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD" target="_blank"
+                rel="noopener noreferrer">GA25HJ4B4XRD</a>)</li>
+              <li>Feb 2023 - Building Web Applications in PHP (<a href="https://www.coursera.org/account/accomplishments/verify/LBJJ7Y3HQRXK">LBJJ7Y3HQRXK</a>)</li>
+              <li>Sep 2023 - Building Database Applications in PHP (<a href="https://www.coursera.org/account/accomplishments/verify/BT8R4E5CUG9H" target="_blank"
+                rel="noopener noreferrer">BT8R4E5CUG9H</a>)</li>
+              <li>Oct 2023 - JavaScript, jQuery, and JSON (<a href="https://www.coursera.org/account/accomplishments/verify/QSNME96N9BC7 target="_blank"
+                rel="noopener noreferrer">QSNME96N9BC7</a>)</li>
             </ul>
+
           <h2>Laserfiche</h2>
             <ul>
               <li>Jun 2022 - <a href="../certs/LF_gold.pdf" target="_blank" rel="noopener noreferrer">Gold</a> </li>
