--- a/pages/samples.html
+++ b/pages/samples.html
@@ -158,7 +158,7 @@
           </ul> <br />
           <h2>Python (from Coursera certifications)</h2>
           <ul>
-            <li><b>Introduction to Python for Data Science Specialization:</b>
+            <li><b>Introduction to Data Science Python</b>
               <ul>
                 <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 1/assignment1.html"
                   target="_blank" rel="noopener noreferrer">Simple regex</a></li>
