--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -177,7 +177,8 @@
               <li>Oct 2023 - JavaScript, jQuery, and JSON (<a href="https://www.coursera.org/account/accomplishments/verify/QSNME96N9BC7 target="_blank"
                 rel="noopener noreferrer">QSNME96N9BC7</a>)</li>
             </ul>
-
+          <h2>Salesforce</h2>
+          <ul>Oct 2023 - Salesforce Ranger: <a href="https://www.salesforce.com/trailblazer/d-lim">Trailblazer profile</a></ul>
           <h2>Laserfiche</h2>
             <ul>
               <li>Jun 2022 - <a href="../certs/LF_gold.pdf" target="_blank" rel="noopener noreferrer">Gold</a> </li>
