--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -136,6 +136,13 @@
               }
             </style>
           </head>
+          <h2>PostgreSQL For Everybody</h2>
+          <ul>
+            <li>Jan 2024 - Database Design and Basic SQL in PostgreSQL (<a href="https://www.coursera.org/account/accomplishments/verify/AD5HZ8JGMZ48" target="_blank"
+              rel="noopener noreferrer">AD5HZ8JGMZ48</a>)</li>
+            <li>Mar 2024 - Intermediate PostgreSQL (<a href="https://www.coursera.org/account/accomplishments/verify/78H5K9AKQN9M" target="_blank"
+              rel="noopener noreferrer">78H5K9AKQN9M</a>)</li>
+          </ul>
           <h2>Django for Everybody (<a href="https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6" target="_blank"
             rel="noopener noreferrer">SVTRKEJV62T6</a>)</h2>
           <ul>
