--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@
           <p><br /> I am an analyst with a background in IT support, causal inference, and economics. Currently, I am
             interested in machine learning and data modeling, visualization, and prediction. <br />
             <h2>Education</h2><br />
-            <b>M.S. Agricultural and Applied Economics</b><br />
+            <b>Master of Science in Agricultural and Applied Economics</b><br />
             <a href="https://www.ttu.edu/" target="_blank" rel="noopener noreferrer">Texas Tech University</a> <br />
             <a href="https://www.depts.ttu.edu/aaec/" target="_blank" rel="noopener noreferrer">Department of
               Agricultural and Applied Economics</a> <br />
             Lubbock, Texas<br /><br />
-            <b>M.A. Philosophy, Political Science, and Economics (PPE)</b><br />
+            <b>Master of Arts in Political Science, Philosophy, and Economics (PPE)</b><br />
             <a href="https://www.cevroinstitut.cz/en/" target="_blank" rel="noopener noreferrer">CEVRO
               Institute</a><br />
             School of Political Studies <br />
             Prague, Czech Republic<br /><br />
-            <b>B.A. General Studies (Political Science, Philosophy, History) </b><br />
+            <b>Bachelor of Arts in General Studies (Political Science, Philosophy, History) </b><br />
             <a href="https://umich.edu/" target="_blank" rel="noopener noreferrer">University of Michigan</a><br />
             <a href="https://lsa.umich.edu/" target="_blank" rel="noopener noreferrer">College of Literature, Science
               and the Arts</a> <br />
