--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -142,6 +142,8 @@
               rel="noopener noreferrer">AD5HZ8JGMZ48</a>)</li>
             <li>Mar 2024 - Intermediate PostgreSQL (<a href="https://www.coursera.org/account/accomplishments/verify/78H5K9AKQN9M" target="_blank"
               rel="noopener noreferrer">78H5K9AKQN9M</a>)</li>
+            <li>Apr 2024 - JSON and Natural Language Processing in PostgreSQL (<a href="https://www.coursera.org/account/accomplishments/verify/258X8ZFP57UN" target="_blank"
+              rel="noopener noreferrer">258X8ZFP57UN</a>)</li>
           </ul>
           <h2>Django for Everybody (<a href="https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6" target="_blank"
             rel="noopener noreferrer">SVTRKEJV62T6</a>)</h2>
