--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -136,7 +136,8 @@
               }
             </style>
           </head>
-          <h2>PostgreSQL For Everybody</h2>
+          <h2>PostgreSQL For Everybody (<a href="https://www.coursera.org/account/accomplishments/specialization/LDV5VWF4QFUE" target="_blank"
+            rel="noopener noreferrer">LDV5VWF4QFUE</a>)</h2>
           <ul>
             <li>Jan 2024 - Database Design and Basic SQL in PostgreSQL (<a href="https://www.coursera.org/account/accomplishments/verify/AD5HZ8JGMZ48" target="_blank"
               rel="noopener noreferrer">AD5HZ8JGMZ48</a>)</li>
@@ -144,6 +145,8 @@
               rel="noopener noreferrer">78H5K9AKQN9M</a>)</li>
             <li>Apr 2024 - JSON and Natural Language Processing in PostgreSQL (<a href="https://www.coursera.org/account/accomplishments/verify/258X8ZFP57UN" target="_blank"
               rel="noopener noreferrer">258X8ZFP57UN</a>)</li>
+            <li>May 2024 - Database Architecture, Scale, and NoSQL with Elasticsearch (<a href="https://www.coursera.org/account/accomplishments/certificate/3FVET2HSUMCT" target="_blank"
+              rel="noopener noreferrer">3FVET2HSUMCT</a>)</li>
           </ul>
           <h2>Django for Everybody (<a href="https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6" target="_blank"
             rel="noopener noreferrer">SVTRKEJV62T6</a>)</h2>
