--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -136,7 +136,11 @@
               }
             </style>
           </head>
-          <h2>PostgreSQL For Everybody (<a href="https://www.coursera.org/account/accomplishments/specialization/LDV5VWF4QFUE" target="_blank"
+          <h2>C Programming for Everybody</h2>
+          <ul>
+            <li>May 2024 - Exploring C (<a href="https://www.coursera.org/account/accomplishments/verify/SL6DX3Y38Q7M" target="_blank" rel="noopener noreferrer">SL6DX3Y38Q7M</a>)</li>
+          </ul>
+          <h2>PostgreSQL for Everybody (<a href="https://www.coursera.org/account/accomplishments/specialization/LDV5VWF4QFUE" target="_blank"
             rel="noopener noreferrer">LDV5VWF4QFUE</a>)</h2>
           <ul>
             <li>Jan 2024 - Database Design and Basic SQL in PostgreSQL (<a href="https://www.coursera.org/account/accomplishments/verify/AD5HZ8JGMZ48" target="_blank"
