--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
             </style>
           </head>
           <h2>About Me</h2>
-          <p><br /> I am an analyst with a background in IT support, causal inference, and economics. Currently, I am
-            interested in machine learning and data modeling, visualization, and prediction. <br />
+          <p><br /> I am senior financial systems analyst with a background in finance and financial systems, IT and database support, causal inference, and economics. <br />
             <h2>Education</h2><br />
             <b>Master of Science in Agricultural and Applied Economics</b><br />
             <a href="https://www.ttu.edu/" target="_blank" rel="noopener noreferrer">Texas Tech University</a> <br />
