--- a/sample/RFM_sample.html
+++ b/sample/RFM_sample.html
@@ -6196,7 +6196,7 @@
             <p>
               Zaldivar, E. (2020). Tutorial: RFM Analysis Using R. RPubs.
               Retrieved 2022, from
-              <a href="ttps://rpubs.com/Eddie%20Zaldivar/705462" class="uri"
+              <a href="https://rpubs.com/Eddie%20Zaldivar/705462" class="uri"
                 >https://rpubs.com/Eddie%20Zaldivar/705462</a
               >
             </p>
