--- a/R/Fundamentals of Data Analytics in the Public Sector with R/1_2_exploring_r.html
+++ b/R/Fundamentals of Data Analytics in the Public Sector with R/1_2_exploring_r.html
@@ -368,6 +368,9 @@ performance of colleges and universities in America, from enrollment and
 library information to graduation rates and financial aid.</p>
 <p>We’re going to start by looking at the admissions data reported for
 2020.</p>
+<p>Set working directing using the following command:</p>
+<p>setwd(“C:\Users\asian\OneDrive\Documents\limdon93.github.io\donlim93.github.io\R\Fundamentals
+of Data Analytics in the Public Sector with R”)</p>
 <pre class="r"><code># We&#39;re going to read in the data from a CSV file. To do this we&#39;re going
 # to use the base R function read.csv(), which returns a dataframe
 admissions_df &lt;- read.csv(&quot;adm2020.csv&quot;)</code></pre>
