--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
+            <li><a href="cv/cv Finance/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
                   class="fa fa-fw fa-file-pdf" aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
