--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </style>
           </head>
           <h2>About Me</h2>
-          <p><br /> I am senior financial systems analyst with a background in finance and financial systems, IT and database support, causal inference, and economics. <br />
+          <p><br /> Financial systems analyst with a proven record in financial systems, business analytics, and process automation. Experienced in IBM TM1/Planning Analytics, Salesforce CRM, SQL, and Python. Skilled at improving forecasting accuracy, financial reporting, and cross-departmental workflows through data-driven solutions. Transitioned from IT to finance to bridge technology and business operations. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree, uniting academic research and technical proficiency in econometrics and optimization. <br />
             <h2>Education</h2><br />
             <b>Master of Science in Agricultural and Applied Economics</b><br />
             <a href="https://www.ttu.edu/" target="_blank" rel="noopener noreferrer">Texas Tech University</a> <br />
