--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
+            <li><a href="cv/cv Finance/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
                   class="fa fa-fw fa-file-pdf" aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
@@ -137,8 +137,7 @@
             </style>
           </head>
           <h2>About Me</h2>
-          <p><br /> I am an analyst with a background in IT support, causal inference, and economics. Currently, I am
-            interested in machine learning and data modeling, visualization, and prediction. <br />
+          <p><br /> Financial systems analyst with a proven record in financial systems, business analytics, and process automation. Experienced in IBM TM1/Planning Analytics, Salesforce CRM, SQL, and Python. Skilled at improving forecasting accuracy, financial reporting, and cross-departmental workflows through data-driven solutions. Transitioned from IT to finance to bridge technology and business operations. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree, uniting academic research and technical proficiency in econometrics and optimization. <br />
             <h2>Education</h2><br />
             <b>Master of Science in Agricultural and Applied Economics</b><br />
             <a href="https://www.ttu.edu/" target="_blank" rel="noopener noreferrer">Texas Tech University</a> <br />
