--- a/pages/papers.html
+++ b/pages/papers.html
@@ -89,6 +89,7 @@
             <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
             <li class="masthead__menu-item"><a href="../pages/certifications.html">Certifications</a></li>
             <li class="masthead__menu-item"><a href="../pages/samples.html">Work Samples</a></li>
+            <li class="masthead__menu-item"><a href="../pages/tableau.html">Tableau Public</a></li>
           </ul>
           <ul class="hidden-links hidden"></ul>
         </nav>
