--- a/pages/tableau.html
+++ b/pages/tableau.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Don Lim | Portfolio</title>
-  <link rel="icon" href="photos/me.jpg" type="image/x-icon" />
+  <link rel="icon" href="../photos/me.jpg" type="image/x-icon" />
   <meta property="og:locale" content="en-US">
   <meta property="og:site_name" content="Don Lim">
   <meta property="og:title" content="Don Lim">
@@ -32,7 +32,7 @@
       a.async = 1;
       a.src = g;
       m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '../www.google-analytics.com/analytics.js', 'ga');
+    })(window, document, 'script', '../../www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-119324483-1', 'auto');
     ga('send', 'pageview');
   </script>
@@ -42,34 +42,34 @@
   <script>
     document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
   </script> <!-- For all browsers -->
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
   <meta http-equiv="cleartype" content="on"> <!-- start custom head snippets -->
-  <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="60x60" href="images/apple-touch-icon-60x60b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="76x76" href="images/apple-touch-icon-76x76b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="120x120" href="images/apple-touch-icon-120x120b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="144x144" href="images/apple-touch-icon-144x144b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="152x152" href="images/apple-touch-icon-152x152b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180b32b.html?v=M44lzPylqQ">
-  <link rel="icon" type="image/png" href="images/favicon-32x32b32b.html?v=M44lzPylqQ" sizes="32x32">
+  <link rel="apple-touch-icon" sizes="57x57" href="../images/apple-touch-icon-57x57b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="60x60" href="../images/apple-touch-icon-60x60b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="72x72" href="../images/apple-touch-icon-72x72b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="76x76" href="../images/apple-touch-icon-76x76b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="114x114" href="../images/apple-touch-icon-114x114b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="120x120" href="../images/apple-touch-icon-120x120b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="144x144" href="../images/apple-touch-icon-144x144b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="152x152" href="../images/apple-touch-icon-152x152b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon-180x180b32b.html?v=M44lzPylqQ">
+  <link rel="icon" type="image/png" href="../images/favicon-32x32b32b.html?v=M44lzPylqQ" sizes="32x32">
   <link rel="icon" type="image/png" href="images/android-chrome-192x192b32b.html?v=M44lzPylqQ" sizes="192x192">
-  <link rel="icon" type="image/png" href="images/favicon-96x96b32b.html?v=M44lzPylqQ" sizes="96x96">
-  <link rel="icon" type="image/png" href="images/favicon-16x16b32b.html?v=M44lzPylqQ" sizes="16x16">
+  <link rel="icon" type="image/png" href="../images/favicon-96x96b32b.html?v=M44lzPylqQ" sizes="96x96">
+  <link rel="icon" type="image/png" href="../images/favicon-16x16b32b.html?v=M44lzPylqQ" sizes="16x16">
   <link rel="manifest" href="https://donlim93.github.io/images/manifest.json?v=M44lzPylqQ">
   <link rel="mask-icon" href="https://donlim93.github.io/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
-  <link rel="shortcut icon" href="images/faviconb32b.html?v=M44lzPylqQ">
+  <link rel="shortcut icon" href="../images/faviconb32b.html?v=M44lzPylqQ">
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="msapplication-TileImage" content="https://donlim93.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
   <meta name="msapplication-config" content="https://donlim93.github.io/images/browserconfig.xml?v=M44lzPylqQ">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="assets/css/academicons.css" />
+  <link rel="stylesheet" href="../assets/css/academicons.css" />
   <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
   </script>
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$','$'], ["\\(","\\)"] ], processEscapes: true } }); </script>
-  <script src="../cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML"
+  <script src="../../cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML"
     type="text/javascript"></script> <!-- end custom head snippets -->
 </head>
 
@@ -82,14 +82,14 @@
             <div class="navicon"></div>
           </button>
           <ul class="visible-links">
-            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a>
+            <li class="masthead__menu-item masthead__menu-item--lg"><a href="../index.html">Don Lim</a>
             </li>
-            <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
-            <li class="masthead__menu-item"><a href="pages/papers.html">Papers</a></li>
-            <li class="masthead__menu-item"><a href="pages/coursework.html">Coursework</a></li>
-            <li class="masthead__menu-item"><a href="pages/certifications.html">Certifications</a></li>
-            <li class="masthead__menu-item"><a href="/pages/samples.html">Work Samples</a></li>
-            <li class="masthead__menu-item"><a href="pages/tableau.html">Tableau Public</a></li>
+            <li class="masthead__menu-item"><a href="../index.html">Home</a></li>
+            <li class="masthead__menu-item"><a href="../pages/papers.html">Papers</a></li>
+            <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
+            <li class="masthead__menu-item"><a href="../pages/certifications.html">Certifications</a></li>
+            <li class="masthead__menu-item"><a href="../pages/samples.html">Work Samples</a></li>
+            <li class="masthead__menu-item"><a href="../pages/tableau.html">Tableau Public</a></li>
           </ul>
           <ul class="hidden-links hidden"></ul>
         </nav>
@@ -99,19 +99,19 @@
   <div id="main" role="main">
     <div class="sidebar sticky">
       <div itemscope itemtype="http://schema.org/Person">
-        <div class="author__avatar"> <img src="images/me.jpg" class="author__avatar" alt="Don Lim">
+        <div class="author__avatar"> <img src="../images/me.jpg" class="author__avatar" alt="Don Lim">
         </div>
         <div class="author__content">
           <h3 class="author__name">Don Lim</h3>
-          <p class="author__bio">Analyst | Causal Inference | Econometrics | Machine Learning | Data
+          <p class="author__bio">Analyst | Causal Inference and Econometrics | Machine Learning | Data
             Visualization</p>
         </div>
-        <div class="author__urls-wrapper"> <button class="btn btn--inverse">Contact</button>
+        <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
           <ul class="author__urls social-icons">
-            <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
+            <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i> 806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="cv/cv Finance/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
+            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
                   class="fa fa-fw fa-file-pdf" aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
@@ -137,25 +137,7 @@
               }
             </style>
           </head>
-          <h2>About Me</h2>
-          <p><br /> Financial systems analyst with a proven record in financial systems, business analytics, and process automation. Experienced in IBM TM1/Planning Analytics, Salesforce CRM, SQL, and Python. Skilled at improving forecasting accuracy, financial reporting, and cross-departmental workflows through data-driven solutions. Transitioned from IT to finance to bridge technology and business operations. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree, uniting academic research and technical proficiency in econometrics and optimization. <br />
-            <h2>Education</h2><br />
-            <b>Master of Science in Agricultural and Applied Economics</b><br />
-            <a href="https://www.ttu.edu/" target="_blank" rel="noopener noreferrer">Texas Tech University</a> <br />
-            <a href="https://www.depts.ttu.edu/aaec/" target="_blank" rel="noopener noreferrer">Department of
-              Agricultural and Applied Economics</a> <br />
-            Lubbock, Texas<br /><br />
-            <b>Master of Arts in Political Science, Philosophy, and Economics (PPE)</b><br />
-            <a href="https://www.cevroinstitut.cz/en/" target="_blank" rel="noopener noreferrer">CEVRO
-              Institute</a><br />
-            School of Political Studies <br />
-            Prague, Czech Republic<br /><br />
-            <b>Bachelor of Arts in General Studies (Political Science, Philosophy, History) </b><br />
-            <a href="https://umich.edu/" target="_blank" rel="noopener noreferrer">University of Michigan</a><br />
-            <a href="https://lsa.umich.edu/" target="_blank" rel="noopener noreferrer">College of Literature, Science
-              and the Arts</a> <br />
-            Ann Arbor, Michigan
-          </p>
+            <h1>Tableau Public Portfolio</h1>
           <script>
             ga('require', 'ipMeta', {
               serviceProvider: 'dimension1',
@@ -211,18 +193,19 @@
       </script>
       <div class="page__footer-follow">
         <ul class="social-icons">
-          <li><strong>Follow:</strong></li>
           <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i
                 class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
           </li>
-          <li><a href="http://github.com/donlim93"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
+          <li><strong>Follow:</strong></li>
+          <li><a href="http://github.com/donlim93" target="_blank" rel="noopener noreferrer"><i
+                class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
         </ul>
       </div>
       <div class="page__footer-copyright">&copy; 2023 Don Lim.</div>
     </footer>
   </div>
-  <script src="assets/js/main.min.js"></script>
+  <script src="../assets/js/main.min.js"></script>
   <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
@@ -237,7 +220,7 @@
     ga('create', 'UA-119324483-1', 'auto');
     ga('send', 'pageview');
   </script>
-  <script src="js/scroll.js"></script>
+  <script src="../js/scroll.js"></script>
 </body>
 
 </html>
