Enhance Tableau dashboard layout: Add spacing between embeds and adjust responsive dimensions for improved display

--- a/pages/tableau.html
+++ b/pages/tableau.html
@@ -14,6 +14,10 @@
       .expanded {
         transform: scale(1.25); /* expands by 25% */
       }
+      /* Add spacing between Tableau dashboard embeds */
+      .tableauPlaceholder {
+        margin-bottom: 2rem;
+      }
     </style>
     <meta charset="utf-8" />
     <title>Don Lim | Portfolio</title>
@@ -292,6 +296,7 @@
                 <param name="filter" value="publish=yes" />
               </object>
             </div>
+
             <div class='tableauPlaceholder' id='viz1761785356118'
               style='position: relative'><noscript><a href='#'><img
                     alt='Nationwide Home Builder '
@@ -309,7 +314,7 @@
                   name='display_overlay' value='yes' /><param
                   name='display_count' value='yes' /><param name='language'
                   value='en-US' /></object></div> <script
-              type='text/javascript'>                    var divElement = document.getElementById('viz1761785356118');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1600px';vizElement.style.height='927px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1600px';vizElement.style.height='927px';} else { vizElement.style.width='100%';vizElement.style.height='1977px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+              type='text/javascript'>                    var divElement = document.getElementById('viz1761785356118');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1600px';vizElement.style.height='927px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1200x';vizElement.style.height='927px';} else { vizElement.style.width='100%';vizElement.style.height='1427px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
             <script type="text/javascript">
               var divElement = document.getElementById("viz1761780253443");
               var vizElement = divElement.getElementsByTagName("object")[0];
