Update tableau.html: Adjust padding for dashboard alignment with main content

--- a/pages/tableau.html
+++ b/pages/tableau.html
@@ -19,15 +19,15 @@
         margin-bottom: 2rem;
       }
 
-      /* Remove right padding and make dashboards align with the main content column
+      /* Remove left padding and make dashboards align with the main content column
          so they line up with the profile/avatar area on other pages. Use
          !important to override site CSS for this single page. */
       #main,
       .page__inner-wrap,
       .page__content,
       article.page {
-        padding-right: 0 !important;
-        margin-right: 0 !important;
+        padding-left: 0 !important;
+        margin-left: 0 !important;
       }
 
       /* Ensure Tableau placeholders can expand to the column width */
